kube/components/om/om-elaseticsearch/om-elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: om-elasticsearch
  labels:
    app: om-elasticsearch
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9200
      nodePort: 30920
      targetPort: 9200
    - name: https
      protocol: TCP
      port: 9300
      nodePort: 30930
      targetPort: 9300
  selector:
    app: om-elasticsearch
