kube/components/om/om-elaseticsearch/om-elasticsearch-ingress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-traffic-to-om-elasticsearch
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [ om-elasticsearch ] }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 9083
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8080
